deploy/examples/sample-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: demo
        version: v1
    spec:
      containers:
      - name: skipper-demo
        image: ghcr.io/zalando/skipper:latest
        args:
          - "skipper"
          - "-inline-routes"
          - "* -> inlineContent(\"<body style='color: green; background-color: white;'><h1>Hello!</h1>\") -> <shunt>"
        ports:
        - containerPort: 9090
