deploy/examples/sample-ing-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "demo-traffic-switching"
  labels:
    application: demo
  annotations:
    zalando.org/backend-weights: |
      {"demo-app-v1": 80, "demo-app-v2": 20}
spec:
  rules:
  - host: "<HOSTNAME>"
    http:
      paths:
      - backend:
          service:
            name: "demo-app-v1"
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: "demo-app-v2"
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
