deploy/examples/sample-ing-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "demo-v1"
  labels:
    application: demo
spec:
  rules:
  - host: "<HOSTNAME>"
    http:
      paths:
      - backend:
          service:
            name: demo-app-v1
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
