deploy/examples/sample-ing-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "demo-feature-toggle"
  labels:
    application: demo
  annotations:
    zalando.org/skipper-predicate: QueryParam("version", "^v2$")
    zalando.org/skipper-filter: ratelimit(2, "1m")
spec:
  rules:
  - host: "<HOSTNAME>"
    http:
      paths:
      - backend:
      - backend:
          service:
            name: demo-app-v1
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
